docs: fix table layout on the install page
- Add a custom class to all tables on the install page, so tables on
  other pages don't get changed
- Ignore the colgroup data, set consistent table cell widths and unset
  the white-space property for being able to have automatic line breaks
- Set explicit line breaks at certain positions
- Fix document white space

--- a/docs/_themes/sphinx_rtd_theme_violet/static/css/theme.css
+++ b/docs/_themes/sphinx_rtd_theme_violet/static/css/theme.css
@@ -4778,3 +4778,22 @@ a:visited:hover {
 .wy-table-responsive div.highlight pre {
   padding: 5px;
 }
+
+
+/* fix table layout on the install page */
+table.table-custom-layout {
+  table-layout: fixed;
+}
+table.table-custom-layout colgroup {
+  display: none;
+}
+table.table-custom-layout colgroup col {
+  width: auto;
+}
+table.table-custom-layout th:first-of-type {
+  width: 12rem;
+}
+table.table-custom-layout tbody tr td {
+  overflow: unset;
+  white-space: unset;
+}
